[package]
name = "mandelbrot"
version = "0.1.0"
authors = ["seanchen <seanchen11235@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "mandelbrot"
path = "src/bin/main.rs"

[lib]
name = "mandelbrot"
path = "src/lib.rs"

[dependencies]
num = "0.3.1"
image = "0.13.0"
